--- a/file2.html
+++ b/file2.html
@@ -1,1 +1,3 @@
 this is file2 page
+this is fully automatic
+[A/n [C[C[C[C[C[C[C[D[D[D[D[D[D[Dthis[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C
