--- a/file2.html
+++ b/file2.html
@@ -2,3 +2,4 @@ this is file2 page
 this is fully automatic
 [A/n [C[C[C[C[C[C[C[D[D[D[D[D[D[Dthis[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C
 i am automated
+this is connected job1 and job2
