--- a/file1.html
+++ b/file1.html
@@ -8,3 +8,4 @@ change 1 done by developer1
 change2 done by developer1
 change 3 done by develop[3~er 1
 change 4 done by developer 1
+developer change1
