--- a/file1.html
+++ b/file1.html
@@ -9,3 +9,4 @@ change2 done by developer1
 change 3 done by develop[3~er 1
 change 4 done by developer 1
 master change1
+develpoer change to test merge
